# alfalpha

./: .gitignore  Notes.md  README.md  Untitled.ipynb  alfa.py  alfa_127154.py  alfa_128913.py  alfa_129133_dynesty.py  alfa_129149.py  alfa_130040.py  alfa_config.py  alfa_smiles_template.py  environment.yml  mock-recovery.ipynb  pyproject.toml  requirements.txt  run_alfa.py
alfa/: .gitignore  _version.py  alfa.py  alfa_dynesty.py  fitting_info.py  get_model.py  grids.py  grids_sMILES.py  plot_outputs.py  polynorm.py  post_process.py  process_outputs.py  read_data.py  setup_params.py  utils.py
alfa.egg-info/: PKG-INFO  SOURCES.txt
indata/: .gitignore
old_files/: alfa_127154.py  alfa_129133_dynesty.py  alfa_template.py  mock-recovery.ipynb
