[project]
name = "alfalpha"
description = "Elemental abundance fitting code based on Fortran alf"
authors = [
    { name="Aliza Beverage", email="abeverage@berkeley.edu" },
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 0 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "License :: Other",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Astronomy"
]
dynamic = ["version"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}



[tool.setuptools]
packages = ["alfa"]

[project.urls]
"Source" = "https://github.com/alizabeverage/alfalpha/tree/main"
"Bug Tracker" = "https://github.com/alizabeverage/alfalpha/issues"

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "alfa/_version.py"
